# cmd/api/api.go
@@ -11,13 +11,9 @@ func CursoRouter(service *gin.Engine, cursoController *controller.CursoControlle
 	router.GET("", cursoController.FindAll)
 	router.GET("/:curso_id", cursoController.FindById)
 	router.POST("", cursoController.CreateCurso)
-
 	router.GET("/:curso_id/comentarios", cursoController.GetComentariosByCursoId)
 	router.POST("/:curso_id/comentarios", cursoController.AddComentarioCurso)
-
-	router.GET("/:curso_id/unidad", unidadController.FindByIdCurso)
-
-	router.POST("ruta-para-insertar-muchos-cursos", cursoController.CreateManyCurso)
+	router.GET("/:curso_id/unidades", unidadController.FindByIdCurso)
 
 }
 
@@ -25,9 +21,7 @@ func UnidadRouter(service *gin.Engine, unidadController *controller.UnidadContro
 	router := service.Group("/unidad")
 
 	router.GET("", unidadController.FindAll)
-	router.POST("", unidadController.CreateOne)
-
-	router.GET("/:unidad_id/clase", claseController.FindAllByIdUnidad)
+	router.GET("/:unidad_id/clases", claseController.FindAllByIdUnidad)
 
 }
 
@@ -35,10 +29,7 @@ func ClaseRouter(service *gin.Engine, claseController *controller.ClaseControlle
 	router := service.Group("/clase")
 
 	router.GET("/:clase_id", claseController.FindById)
-	router.POST("", claseController.CreateClase)
-	router.POST("/post-many", claseController.CreateManyClase)
-
-	router.POST("/comentario", comentarioClaseController.CreateComentarioClase)
-	router.GET("/:clase_id/comentario", comentarioClaseController.FindAllByIdClase)
-	router.GET("/comentario/:comentario_id", comentarioClaseController.FindById)
+	router.POST("/comentarios", comentarioClaseController.CreateComentarioClase)
+	router.GET("/:clase_id/comentarios", comentarioClaseController.FindAllByIdClase)
+	router.GET("/comentarios/:comentario_id", comentarioClaseController.FindById)
 }
